Decides on test framework and test runtime setup