@@ -1,14 +1,13 @@
-//import org.gradle.api.tasks.testing.logging.TestLogEvent.STARTED
-//import org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
-//import org.gradle.api.tasks.testing.logging.TestLogEvent.PASSED
-//import org.gradle.api.tasks.testing.logging.TestLogEvent.SKIPPED
-//import org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+import org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
+import org.gradle.api.tasks.testing.logging.TestLogEvent.PASSED
+import org.gradle.api.tasks.testing.logging.TestLogEvent.SKIPPED
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
 
 val ktor_version: String by project
 val kotlin_version: String by project
 val logback_version: String by project
 val mockk_version: String by project
-val spek_version: String by project
+val junit_version: String by project
 
 plugins {
     application
@@ -44,12 +43,14 @@ dependencies {
     implementation("io.ktor:ktor-client-auth-jvm:$ktor_version")
     implementation("io.ktor:ktor-client-json-jvm:$ktor_version")
     implementation("io.ktor:ktor-client-gson:$ktor_version")
-    testImplementation("io.ktor:ktor-server-tests:$ktor_version")
+    testImplementation("io.ktor:ktor-server-tests:$ktor_version") {
+        exclude("junit", "junit")
+    }
     testImplementation("io.ktor:ktor-client-mock:$ktor_version")
     testImplementation("io.ktor:ktor-client-mock-jvm:$ktor_version")
     testImplementation("io.mockk:mockk:$mockk_version")
-    testImplementation("org.jetbrains.spek:spek-api:$spek_version")
-    testImplementation("org.jetbrains.spek:spek-junit-platform-engine:$spek_version")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junit_version")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junit_version")
 }
 
 kotlin.sourceSets["main"].kotlin.srcDirs("src")
@@ -58,20 +59,17 @@ kotlin.sourceSets["test"].kotlin.srcDirs("test")
 sourceSets["main"].resources.srcDirs("resources")
 sourceSets["test"].resources.srcDirs("testresources")
 
+tasks.named<Test>("test") {
+    useJUnitPlatform()
+    testLogging {
+        events = setOf(PASSED, SKIPPED, FAILED)
+        showCauses = true
+        showExceptions = true
+        showStackTraces = true
+        exceptionFormat = FULL
+    }
+}
 
-//val test: Test by tasks.getting(Test::class) {
-//    useJUnitPlatform()
-//    testLogging {
-//        events = setOf(STARTED, PASSED, SKIPPED, FAILED)
-//        showCauses = true
-//        showExceptions = true
-//        showStackTraces = true
-//        exceptionFormat = FULL
-//    }
-//    maxHeapSize = "1024m"
-//    jvmArgs("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:MaxPermSize=256m")
-//}
-//
 //val sourcesJar by tasks.creating(Jar::class) {
 //    archiveClassifier.set("sources")
 //    from(sourceSets.getByName("main").allSource)
